thesis: Add background chapter on RISC architectures

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -256,3 +256,28 @@
     publisher = {ACM},
     address = {New York, NY, USA},
 }
+
+@manual{Armv8,
+    title = {Arm Architecture Reference Manual},
+    subtitle= {Armv8, for Armv8-A architecture profile},
+    year = {2019},
+    organization = {Arm Limited},
+    version = {E.a},
+}
+
+@manual{MIPS,
+    title = {MIPS Architecture For Programmers Volume I-A: Introduction to the MIPS64 Architecture},
+    year = {2014},
+    organization = {MIPS},
+    version = {Revision 6.01},
+}
+
+@book{Hennessy12,
+    title = {Computer Architecture: A Quantitative Approach},
+    author = {Hennessy, John L. and Patterson, David A.},
+    address = {Amsterdam},
+    publisher = {Elsevier, Morgan Kaufmann},
+    year = {2012},
+    edition = {5},
+    isbn = {978-0-12-383872-8},
+}
