thesis: Small fixes

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -35,7 +35,7 @@
 
 @manual{RiscVISA,
     title = {The RISC-V Instruction Set Manual, Volume I: User-Level ISA},
-    note = {Version 2.2},
+    version = {2.2},
     author = {Andrew Waterman and Krste Asanovi\'c},
     organization = {RISC-V Foundation},
     month = {May},
@@ -44,7 +44,7 @@
 
 @manual{RiscVISAP,
     title = {The RISC-V Instruction Set Manual, Volume II: Privileged Architecture},
-    note = {Version 1.10},
+    version = {1.10},
     author = {Andrew Waterman and Krste Asanovi\'c},
     organization = {RISC-V Foundation},
     month = {May},
