--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -9,13 +9,13 @@ Here, the approaches of two papers are combined:
 \citeauthor{Reid17} in \citetitle{Reid17} \cite{Reid17} stressed the need of verifying specifications themselves as opposed to simply verifying implementations against specifications.
 To tackle this, he proposed to verify specifications against higher level properties and used this methodology to verify the specification of the \gls{arm} M-class specification.
 In this thesis, two lines of his research will be continued: \begin{enumerate*}[label=\alph*)]
-    \item the main contribution of this thesis also is to propose a methodology for verifying specifications against higher level properties and
+    \item the main contribution of this thesis also is to propose an approach for verifying specifications against higher level properties and
     \item this methodology will be applied to an \gls{isa} specification as well.
 \end{enumerate*}
 
-The idea behind this methodology mainly stems from the work of \citeauthor{Ferraiuolo17} in \citetitle{Ferraiuolo17} \cite{Ferraiuolo17}.
+The idea behind the higher level properties an \gls{isa} will be verified against mainly stems from the work of \citeauthor{Ferraiuolo17} in \citetitle{Ferraiuolo17} \cite{Ferraiuolo17}.
 As the title indicates, their work also falls into the domain of verification; the authors propose a new way of verifying \gls{hdl} code implementations of \glspl{isa}.
-The core idea behind this is to add a new type system to the existing \gls{hdl} language \gls{secverilog}.
+The core idea behind this is to enhance the type system of the existing \gls{hdl} language \gls{secverilog}.
 The types available to this type system serve as security annotation of information.
 By applying typing rules to expressions in the \gls{hdl} code, new labels are generated and thus information is tracked through the code.
 Certain type conversions are, however, prohibited and mark a security vulnerability.
